[gd_scene load_steps=5 format=3 uid="uid://bubcdtv7x4qvn"]

[ext_resource type="Script" path="res://scenes/ui/inventory/slot_display.gd" id="1_npl47"]
[ext_resource type="Resource" uid="uid://t6dvd3ikteh5" path="res://database/food/water_clear.tres" id="2_kglrj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uqcag"]
bg_color = Color(0.803922, 0.803922, 0.803922, 0)
border_width_left = 12
border_width_top = 12
border_width_right = 12
border_width_bottom = 12
border_color = Color(1, 1, 1, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f0wdp"]
bg_color = Color(0.803922, 0.803922, 0.803922, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.250818, 0.250818, 0.250818, 1)
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[node name="SlotDisplay" type="TextureButton"]
custom_minimum_size = Vector2(40, 40)
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_npl47")
_displayed_item = ExtResource("2_kglrj")

[node name="RareFrame" type="Panel" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_uqcag")

[node name="ItemTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Frame" type="Panel" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_f0wdp")

[node name="AmountLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.877616, 0.877616, 0.877616, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
horizontal_alignment = 2
